# python-tools

./: .gitignore  .pdm-python  404.html  LICENSE  README.md  duties.py  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  python-documentation.yml  python-package.yml  python-publish.yml  testa-action.yml
api/: index.html
docs/: acciones_explicadas.md  api.md  develop.md  index.md  manual_de_usuario.md
manual_de_usuario/: index.html
reference/SUMMARY/: index.html
reference/capo_tools/: index.html
reference/capo_tools/datasets/: index.html
reference/capo_tools/datasets/CAVE/: index.html
reference/capo_tools/datasets/CAVE/dataset/: index.html
reference/capo_tools/datasets/CAVE/tools/: index.html
reference/capo_tools/datasets/CAVE/utils/: index.html
reference/capo_tools/datasets/CAVE/utils/downsampling/: index.html
reference/capo_tools/datasets/CAVE/utils/extract_random_patch/: index.html
reference/capo_tools/datasets/ETS2/: index.html
reference/capo_tools/datasets/ETS2/dataset/: index.html
reference/capo_tools/datasets/ETS2/ets2_tools/: index.html
reference/capo_tools/datasets/ETS2/ets2_tools/depth_file/: index.html
reference/capo_tools/datasets/ETS2/tools/: index.html
reference/capo_tools/display/: index.html
reference/capo_tools/display/time_series/: index.html
reference/capo_tools/display/tools/: index.html
reference/capo_tools/display/tools/depth_tools/: index.html
reference/capo_tools/pt_functions/: index.html
reference/capo_tools/pt_functions/ffts/: index.html
scripts/: gen_ref_nav.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/acciones_explicadas/: index.html
site/api/: index.html
site/develop/: index.html
site/manual_de_usuario/: index.html
site/search/: search_index.json
src/capo_tools/: __version__.py
src/capo_tools/datasets/CAVE/: dataset.py  tools.py
src/capo_tools/datasets/CAVE/utils/: downsampling.py  extract_random_patch.py
src/capo_tools/datasets/ETS2/: __init__.py  dataset.py  tools.py
src/capo_tools/datasets/ETS2/ets2_tools/: __init__.py  depth_file.py
src/capo_tools/display/: time_series.py
src/capo_tools/display/tools/: depth_tools.py
src/capo_tools/pt_functions/: ffts.py
src/capo_tools/vision/: torch.py
src/capo_tools/vision/functions/: torch.py
tests/datasets/CAVE/: test_dataset.py  test_tools.py  test_utils.py
tests/datasets/ETS2/: test_dataset.py  test_ets2_tools.py  test_tools.py
tests/display/: test_time_series.py
tests/pt_functions/: test_pt_functions.py
tests/resources/ets2_dataset/: dataset_split_frames.npz  dataset_split_sequences.npz
tests/resources/ets2_dataset/train/20210721-000004/: capture-0000000001.depth.raw  capture-0000000002.depth.raw  capture-0000000003.depth.raw  capture-0000000004.depth.raw  capture-0000000005.depth.raw  session.json  telemetry.txt
tests/resources/ets2_dataset/train/20210722-000003/: capture-0000000001.depth.raw  capture-0000000002.depth.raw  capture-0000000003.depth.raw  capture-0000000004.depth.raw  capture-0000000005.depth.raw  session.json  telemetry.txt
tests/vision/: torch.py
