[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "capo_tools"
description = "Tools for CAPO Research Group python projects"
authors = [
    {name="CAPO Research Group", email="info@caporesearch.es"},
    {name="David María Arribas", email="david.maria@urjc.es"},
    {name="Iván Ramírez Díaz", email="ivan.ramirez@urjc.es"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {file="LICENSE"}
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.8.2",
    "rawutil>=2.7.4",
    "pillow>=10.2.0",
    "pandas>=2.2.0",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "torchaudio>=2.0.2",
    "imageio>=2.34.0",
    "tqdm>=4.66.2",
    "wget>=3.2",
]
dynamic = ["version"]

[tool.pdm]
version = { source = "git-tag" }

[tool.pdm.dev-dependencies]
dev = [
    "twine>=4.0.2",
    "pytest>=8.0.0",
    "coverage>=7.4.1",
    "flake8>=6.1.0",
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.2.0",
    "mkdocstrings>=0.18.1",
    "pandoc"
]
