[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "capo_tools"
description = "Tools for CAPO Research Group python projects"
authors = [
    {name="CAPO Research Group", email="info@caporesearch.es"},
    {name="David María Arribas", email="david.maria@urjc.es"},
    {name="Iván Ramírez Díaz", email="ivan.ramirez@urjc.es"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {file="LICENSE"}
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.8.2",
    "rawutil>=2.7.4",
    "pillow>=10.2.0",
    "pandas>=2.2.0",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "torchaudio>=2.0.2",
    "imageio>=2.34.0",
    "tqdm>=4.66.2",
    "wget>=3.2",
    "plotly>=6.0.0",
]
dynamic = ["version"]

[tool.pdm]
version = { source = "file", path = "src/capo_tools/__version__.py" }

[tool.pdm.dev-dependencies]
dev = [
    "twine>=4.0.2",
    "pytest>=8.0.0",
    "coverage>=7.4.1",
    "mkdocs>=1.5.3",
    "mkdocstrings>=0.24.0",
    "mkdocs-material>=9.5.8",
    "mkdocstrings-python>=1.8.0",
    "griffe>=0.40.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-git-committers-plugin-2>=2.2.3",
    "pymdown-extensions>=10.7",
    "duty>=1.2.0",
    "flake8>=6.1.0",
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.2.0",
    "mkdocstrings>=0.18.1",
    "pandoc"
]
