[metadata]
name = capo_tools
version = 0.0.4_alpha
author = David Maria
author_email = david.maria@urjc.es
description = Tools for CAPO Research Group projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.caporesearch.org
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
include = capo_tools, capo_tools.*